# crates-show

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  crates  crates.css  crates.service  docker-compose.yml  launch-ls-server  ls-server.service  package.json  tailwind.config.js  tux  tux.css  tux.service  ungit.service
scripts/: install_tux_server.fish  uninstall_tux_server.fish  update_tux_server.fish
src/: administrate.rs  main.rs  printable.rs
templates/: add.html.tera  base.html.tera  bench.html.tera  clippy.html.tera  fail.html.tera  index.html.tera  manage.html.tera  remove.html.tera  run.html.tera  test.html.tera  time.html.tera
web/assets/: instructions.txt  manifest.json
web/assets/css/: app.css  ji.css
web/assets/js/: ji.js
