[package]
name = "tux"
version = "0.0.2"
edition = "2021"
description = "A web app tools for rust project"
license = "GPL-2.0-or-later"
repository = "https://github.com/taishingi/ji"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
colored_truecolor = "0.1.0"
glob = "0.3.1"
rsbadges = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
crossterm_cursor = "0.4.0"
rocket = "0.5.0"
openssl-sys = "0.9"
openssl = "0.10"
tokio = "1.34.0"
rocket-include-static-resources = "0.10.5"
askama = "0.12.1"
tera = { version = "1.19.1", default-features = false }
rocket_contrib = "0.4.11"
scan_dir = "0.3.3"
[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.4"
features = ["handlebars", "tera"]
