[package]
name = "ls"
version = "0.0.1"
edition = "2021"
description = "A web app tools for rust project"
license-file = "LICENSE"
repository = "https://github.com/taishingi/ls"
resolver = "2"
authors = ["Willy Micieli"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
colored_truecolor = "0.1.0"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
openssl-sys = "0.9"
openssl = "0.10"
tokio = "1.34.0"
rocket-include-static-resources = "0.10.5"
askama = "0.12.1"
tera = { version = "1.19.1", default-features = false }
scan_dir = "0.3.3"
sqlite = "0.32.0"
printers = "2.0.0"
cargo_metadata = "0.18.1"
rustmark = "0.5.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
